# tournamint-api

./: .env.example  .gitignore  API_IMPLEMENTATION_SUMMARY.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  SETUP_INSTRUCTIONS.md  TOURNAMENT_BRACKETS_STANDINGS_README.md
docs/: API_DOCUMENTATION.md
migrations/: 20250504171146_create_user_table.up.sql  20250511133027_create_players_table.down.sql  20250511133027_create_players_table.up.sql  20250513034340_create_teams_table.down.sql  20250513034340_create_teams_table.up.sql  20250516163830_create_team_members_table.down.sql  20250516163830_create_team_members_table.up.sql  20250519174544_create_user_tokens_table.down.sql  20250519174544_create_user_tokens_table.up.sql  20250521142215_create_tournaments_table.up.sql  20250521142225_create_categories_table.down.sql  20250521142225_create_categories_table.up.sql  20250521203655_create_tournament_participants_table.down.sql  20250521203655_create_tournament_participants_table.up.sql  20250524153719_create_tournament_stages_table.up.sql  20250524154325_create_tournament_rounds_table.down.sql  20250524154325_create_tournament_rounds_table.up.sql  20250526153926_create_matches_table.down.sql  20250526153926_create_matches_table.up.sql  20250621165044_create_sports_types_enum.down.sql  20250621165044_create_sports_types_enum.up.sql  20250621165352_create_tournaments_table.down.sql  20250621165352_create_tournaments_table.up.sql  20250621165432_create_tournament_categories_table.down.sql  20250621165432_create_tournament_categories_table.up.sql  20250621172124_create_tournament_registrations_table.down.sql  20250621172124_create_tournament_registrations_table.up.sql  20250621172203_create_matches_table.down.sql  20250621172203_create_matches_table.up.sql  20250621172247_create_match_results_table.down.sql  20250621172247_create_match_results_table.up.sql  20250622120000_create_match_media_comments_subscriptions.down.sql  20250622120000_create_match_media_comments_subscriptions.up.sql  20250808_create_notifications_table.down.sql  20250808_create_notifications_table.up.sql  20250808_create_payments_table.down.sql  20250808_create_payments_table.up.sql  20250808_create_user_profiles_table.down.sql  20250808_create_user_profiles_table.up.sql  20260207124703_create_notifications_table.down.sql  (+5 more)
src/: lib.rs  main.rs
src/application/: auth_services.rs  auth_use_cases.rs  match_services.rs  match_use_cases.rs  mod.rs  notification_services.rs  payment_services.rs  (+10 more)
tests/: lib.rs  match_api_test.rs  tournament_api_test.rs  user_profile_api_test.rs
(+184 files in other folders)
