[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
cookie = "0.16"
chrono = "0.4"
dotenv = "0.15"
futures-util = { version = "0.3", features = ["std"] }
jsonwebtoken = "8"
oauth2 = { version = "4.3", features = ["reqwest"] }
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json"]}
sea-query = "0.32.0"
sea-query-binder = { version = "0.7", features = ["sqlx-postgres", "with-uuid", "with-chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
validator = { version = "0.19", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
