[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
actix-web = "4.0"
anyhow = "1.0"
async-trait = "0.1"
cookie = "0.16"
chrono = "0.4"
dotenv = "0.15"
futures-util = { version = "0.3", features = ["std"] }
jsonwebtoken = "8"
oauth2 = { version = "4.3", features = ["reqwest"] }
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json"]}
rust_decimal = { version = "1.36", features = ["serde", "db-postgres"] }
sea-query = { version = "0.32.0", features = ["with-json", "with-rust_decimal"] }
sea-query-binder = { version = "0.7", features = ["sqlx-postgres", "with-uuid", "with-chrono", "with-json", "with-rust_decimal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "rust_decimal"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
validator = { version = "0.19", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
